nav link active state improved

--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -280,12 +280,19 @@ header {
   box-shadow: 0 6px 12px #00000029;
 }
 
+.navbar-menu-list li {
+  position: relative;
+}
+
 .menu-link {
+  display: inline-block;
   text-decoration: none;
   font-size: 1.25rem;
   outline: none;
+  border-top: 2px solid transparent;
   border-bottom: 2px solid transparent;
-  margin-bottom: -2px;
+  /* margin-bottom: -2px; */
+  padding: 0.5rem 2rem;
 }
 
 .menu-link::after {
@@ -297,7 +304,7 @@ header {
   transform: scaleX(0);
   transform-origin: center;
   transition: transform 0.3s;
-  top: -2px;
+  /* top: -2px; */
 }
 
 .menu-link:hover {
@@ -309,8 +316,8 @@ header {
 }
 
 .menu-link-active {
-  /* border-bottom: 2px solid var(--light-text-col); */
-  text-shadow: 0 2px 10px #fff
+  position: relative;
+  background-color: #25252580;
 }
 
 .mobile-menu {
@@ -332,13 +339,11 @@ header {
    align-items: flex-start;
    width: 90%;
    margin: 0 auto;
-   padding: 1rem 0;
  }
 
  .navbar-menu-list {
    display: none;
    justify-content: flex-start;
-   gap: 3rem;
    margin: 0;
    padding: 0;
  }
@@ -407,8 +412,8 @@ ul li {
   margin-bottom: 0.75rem;
 }
 
-.mobile-menu-list li:first-of-type {
- padding-top: 1rem;
+.mobile-menu-list li:last-of-type {
+ padding-bottom: 1rem;
 }
 
 .hamburger-label {
@@ -418,8 +423,16 @@ ul li {
   cursor: pointer;
 }
 
+#menu {
+  padding: 0.5rem 0;
+}
+
 #menu:hover {
   text-decoration: none;
+}
+
+#menu:hover::after {
+  transform: scaleX(0);
 }
 
 #hamburger-menu {
@@ -950,7 +963,7 @@ footer {
 --------------------*/
   .navbar-menu {
     align-items: center;
-    padding: 0.75rem 0;
+    /* padding: 0.75rem 0; */
   }
 
   .navbar-menu-list {
