--- a/styles/index.css
+++ b/styles/index.css
@@ -155,17 +155,26 @@
 
 .hero-heading {
   font-family: var(--main-heading);
+  font-weight: 500;
   font-size: 2.5rem;
   margin: 0;
   padding: 0;
+  line-height: 1.25;
+  /* border-bottom: 2px solid #ffffff40; */
+}
+
+.hero-heading-bold {
+  font-weight: 1000;
 }
 
 .hero-sub-heading {
   font-weight: 500;
   font-family: var(--main-sub-heading);
+  color: var(--light-text-col);
   margin: 1rem 0 0 0;
   padding: 0; 
   font-style: italic;
+  opacity: 0.85;
 }
 
 
@@ -579,6 +588,10 @@
 
   .hero-sub-heading {
     font-size: 2rem;
+  }
+
+  .speech-bubble-text {
+    font-size: 1.25rem;
   }
 
   .info-icon {
