--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -53,6 +53,36 @@ a {
 
 /* header 
 --------------------*/
+label {
+  font-size: 1rem;
+}
+
+input, select, textarea {
+  display: inline-block;
+  width: 100%;
+  font-size: 1rem;
+  background-color: #fff;
+  color: #172940;
+  border-radius: 0;
+  border: 3px solid #0030574d;
+  padding: 0.5rem;
+  margin: 0 auto;
+  transition-property: border;
+  transition-duration: 0.3s;
+  font-family: var(--body-text);
+}
+
+input:focus {
+  outline: none;
+  border: 3px solid var(--input-focus-col);
+}
+
+textarea {
+  font-family: var(--body-text);
+  padding: 0.75rem;
+  height: 250px;
+}
+
 .modal {
   position: absolute;
   width: 95%;
@@ -139,36 +169,6 @@ a {
   opacity: 0.75;
 }
 
-label {
-  font-size: 1rem;
-}
-
-input, select, textarea {
-  display: inline-block;
-  width: 100%;
-  font-size: 1rem;
-  background-color: #fff;
-  color: #172940;
-  border-radius: 0;
-  border: 3px solid #0030574d;
-  padding: 0.5rem;
-  margin: 0 auto;
-  transition-property: border;
-  transition-duration: 0.3s;
-  font-family: var(--body-text);
-}
-
-input:focus {
-  outline: none;
-  border: 3px solid var(--input-focus-col);
-}
-
-textarea {
-  font-family: var(--body-text);
-  padding: 0.75rem;
-  height: 250px;
-}
-
 header {
   display: inline;
 }
@@ -200,7 +200,7 @@ header {
 
 .logo-text, .logo-text-mobile {
   background: linear-gradient(90deg, rgba(3,88,140,1) 0%, rgba(7,38,68,1) 31%, rgba(5,57,97,1) 88%, rgba(2,75,125,1) 100%);
-  background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: var(--logo-text);
   font-weight: bold;
@@ -483,7 +483,7 @@ ul li {
   display: flex;
   gap: 1rem;
   padding: 1rem 0;
-  background: rgb(241,241,241);
+  /* background: rgb(241,241,241); */
   background: linear-gradient(90deg, rgba(235,236,242,1) 0%, rgba(255,255,255,1) 100%); 
 }
 
@@ -506,9 +506,11 @@ ul li {
   font-family: var(--main-sub-heading);
   font-size: 1.125rem;
   font-weight: 600;
-  margin-top: 0.5rem;
+  margin: 0;
   padding: 0.5rem 1rem;
-  color: #C33764;
+  color: var(--dark-text-col);
+  /* border-bottom: 1px solid #00000040; */
+  /* background: linear-gradient(90deg, rgba(235,236,242,1) 0%, rgba(255,255,255,1) 100%); */
 }
 
 .cta-wrapper {
@@ -784,6 +786,7 @@ footer {
 }
 
 @media only screen and (min-width: 768px) {
+
   /* Header
 --------------------*/
   .logo {
@@ -818,7 +821,8 @@ footer {
     border-radius: 5px;
   }
 
-  .image-box, .image-box img {
+  .image-box,
+  .image-box img {
     border-radius: 5px;
   }
 }
@@ -828,22 +832,22 @@ footer {
   /* Header
   --------------------*/
   .navbar-icon {
-      font-size: 2.5rem;
-    }
+    font-size: 2.5rem;
+  }
 
   .logo-text {
     display: block;
   }
-    
+
   .logo-text-mobile {
     display: none;
-  }  
+  }
 
   #header-time-icon {
     font-size: 1.375rem;
   }
-  
-  #header-time-text { 
+
+  #header-time-text {
     font-size: 1rem;
   }
 
