--- a/styles/index.css
+++ b/styles/index.css
@@ -48,7 +48,7 @@
   font-weight: 500;
   font-family: var(--main-sub-heading);
   color: var(--light-text-col);
-  margin: 1rem 0 0 0;
+  margin: 0.5rem 0 0 0;
   padding: 0;
   font-style: italic;
   opacity: 0.85;
@@ -57,6 +57,7 @@
 .hero-button {
   align-self: start;
   font-size: 1.25rem;
+  margin-top: 1.5rem;
 }
 
 .speech-bubble {
